:bug: bug of token
